--- a/_includes/layout/header.liquid
+++ b/_includes/layout/header.liquid
@@ -1,6 +1,6 @@
 <header>
 	<div id="header-wrapper">
-		<div id="header-logo">CV</div>
+		<div id="header-logo">Mesh's CV</div>
 		<div id="header-links">
 			<a href="{{ '/assets/pdfs/cv.pdf' | url }}" target="_blank" class="header-link">Download</a>
 			<span class="header-link" onclick="showContactPopup()">Contact</span>
