Hide profile image

--- a/_includes/profile.liquid
+++ b/_includes/profile.liquid
@@ -1,5 +1,5 @@
 <section id="profile">
-  <div id="profile-pic-wrapper">
+  <div id="profile-pic-wrapper" style="display: none">
     <img id="profile-pic" src="{{ cv.profile.image | url }}" />
   </div>
   <div id="profile-info">
