--- a/app/globals.css
+++ b/app/globals.css
@@ -9,30 +9,24 @@
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
 
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
+  --primary-glow: conic-gradient(from 180deg at 50% 50%,
+      #16abff33 0deg,
+      #0885ff33 55deg,
+      #54d6ff33 120deg,
+      #0071ff33 160deg,
+      transparent 360deg);
+  --secondary-glow: radial-gradient(rgba(255, 255, 255, 1),
+      rgba(255, 255, 255, 0));
 
   --tile-start-rgb: 239, 245, 249;
   --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
+  --tile-border: conic-gradient(#00000080,
+      #00000040,
+      #00000030,
+      #00000020,
+      #00000010,
+      #00000010,
+      #00000080);
 
   --callout-rgb: 238, 240, 241;
   --callout-border-rgb: 172, 175, 176;
@@ -48,24 +42,20 @@
     --background-end-rgb: 240, 240, 240;
 
     --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
+    --secondary-glow: linear-gradient(to bottom right,
+        rgba(1, 65, 255, 0),
+        rgba(1, 65, 255, 0),
+        rgba(1, 65, 255, 0.3));
 
     --tile-start-rgb: 2, 13, 46;
     --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
+    --tile-border: conic-gradient(#ffffff80,
+        #ffffff40,
+        #ffffff30,
+        #ffffff20,
+        #ffffff10,
+        #ffffff10,
+        #ffffff80);
 
     --callout-rgb: 20, 20, 20;
     --callout-border-rgb: 108, 108, 108;
@@ -121,14 +111,14 @@ a {
 }
 
 body {
-    font: 400 14px/1.6 "Open Sans",sans-serif;
-    font-size: 16px;
-    color: rgb(3, 6, 11);
-    margin:  0;
+  font: 400 14px/1.6 "Open Sans", sans-serif;
+  font-size: 16px;
+  color: rgb(3, 6, 11);
+  margin: 0;
 }
 
 a {
-	text-decoration: none;
+  text-decoration: none;
 }
 
 ul {
@@ -140,42 +130,42 @@ p {
 }
 
 header {
-	background-color: var(--theme-colour);
-	color: #FFF;
-	min-height: 50px;
+  background-color: var(--theme-colour);
+  color: #FFF;
+  min-height: 50px;
 }
 
 #header-wrapper {
-	max-width: var(--page-width);
-    margin: 0 auto;
-    padding: 0 20px;
-    display: flex;
-    justify-content: space-between;
+  max-width: var(--page-width);
+  margin: 0 auto;
+  padding: 0 20px;
+  display: flex;
+  justify-content: space-between;
 }
 
 #header-logo {
-	font-size: 30px;
+  font-size: 30px;
 }
 
 #header-links {
-	margin-top: 10px;
+  margin-top: 10px;
 }
 
 .header-link {
-	color: #FFF;
-	padding: 5px;
-	margin:  0 5px;
+  color: #FFF;
+  padding: 5px;
+  margin: 0 5px;
 }
 
 .header-link:hover {
-	background-color: #E5E7EB;
-	color: #000;
-	border-radius: 5px;
-	cursor: pointer;
+  background-color: #E5E7EB;
+  color: #000;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 h2 {
-	font-size:  30px;
+  font-size: 30px;
 }
 
 h3 {
@@ -189,9 +179,9 @@ h3 {
 }
 
 #body-wrapper {
-    max-width: var(--page-width);
-    margin: 0 auto;
-    padding: 0 20px;
+  max-width: var(--page-width);
+  margin: 0 auto;
+  padding: 0 20px;
 }
 
 .chakra-ui-light {
@@ -223,30 +213,30 @@ h3 {
 }
 
 #profile {
-	display: flex;
-	flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 
 #profile h1 {
-	margin: 0 0 10px;
-	font-size: 48px;
+  margin: 0 0 10px;
+  font-size: 48px;
 }
 
 #profile span {
-	font-weight: bold;
+  font-weight: bold;
 }
 
 #profile-pic-wrapper {
-	flex:  1;
+  flex: 1;
 }
 
 #profile-pic {
-	width:  200px;
+  width: 200px;
 }
 
 #profile-info {
-	flex: 2;
-	margin: 0;
+  flex: 2;
+  margin: 0;
 }
 
 #profile-links {
@@ -256,73 +246,73 @@ h3 {
 }
 
 #profile-links img {
-	width:  30px;
-	height:  30px;
+  width: 30px;
+  height: 30px;
 }
 
 section {
-	margin-top: 80px;
+  margin-top: 80px;
 }
 
 section h2 {
-	border-bottom: var(--border-style);
-	padding-bottom: 10px;
-    margin-bottom: 10px;
+  border-bottom: var(--border-style);
+  padding-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 section p {
-	color: rgb(45, 70, 101);
+  color: rgb(45, 70, 101);
 }
 
 #skills-sections {
-	display:  flex;
-	flex-direction: row;
-	justify-content: space-between;
-	flex-wrap: nowrap;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: nowrap;
 }
 
 .skills-section {
-	flex: 1;
-	min-width: 180px;
-	max-width: 200px;
+  flex: 1;
+  min-width: 180px;
+  max-width: 200px;
 }
 
 .skills-section li {
-	margin-bottom: 5px;
+  margin-bottom: 5px;
 }
 
 .workexp-entry {
-	padding-bottom: 20px;
-	border-bottom: var(--border-style);
-	margin-bottom:  20px;
+  padding-bottom: 20px;
+  border-bottom: var(--border-style);
+  margin-bottom: 20px;
 }
 
 .workexp-entry:last-child {
-	border-bottom: none;
+  border-bottom: none;
 }
 
 .workexp-entry-header {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
 }
 
 .workexp-entry-title {
-	font-size: 22px;
-    margin: 0;
+  font-size: 22px;
+  margin: 0;
 }
 
 .workexp-entry-location {
-	display: inline-block;
-	text-align: center;
+  display: inline-block;
+  text-align: center;
 }
 
 .workexp-entry-location::after {
-	content: " |";
+  content: " |";
 }
 
 .workexp-entry-datelocation {
-	padding: 5px 10px;
+  padding: 5px 10px;
   border-radius: 4px;
   background-color: #A1A1A1;
   color: #FFF;
@@ -332,89 +322,90 @@ section p {
 }
 
 .workexp-entry-company {
-	margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .workexp-entry-date {
-	margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .workexp-entry-tasks {
-	margin-left: 40px;
+  margin-left: 40px;
+  margin-top: 20px;
 }
 
 .workexp-entry-tasks ul li {
-	margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 #workexp-entry-carphone .workexp-entry-datelocation {
-	width: 280px;
+  width: 280px;
 }
 
 .contactform-content {
-	display: none;
+  display: none;
 }
 
 .contactform {
-	width: 400px;
-	margin: 0 auto;
+  width: 400px;
+  margin: 0 auto;
 }
 
 .contactform-row {
-	width: 400px;
-	margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
+  width: 400px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
 }
 
 .contactform-row input,
 .contactform-row textarea {
-	width: 300px;
-	margin-bottom: 15px;
+  width: 300px;
+  margin-bottom: 15px;
 }
 
 .contactform-row textarea {
-	min-height:  300px;
-	resize: none;
+  min-height: 300px;
+  resize: none;
 }
 
 .swal2-actions .contactform-confirm-btn {
-	background-color: var(--theme-colour);
+  background-color: var(--theme-colour);
 }
 
 @media only screen and (max-width: 800px) {
-	#profile {
-		flex-direction: column;
-	}
+  #profile {
+    flex-direction: column;
+  }
 
-	#profile-pic-wrapper {
-		display: flex;
-		justify-content: center;
-	}
+  #profile-pic-wrapper {
+    display: flex;
+    justify-content: center;
+  }
 
-	#profile-info {
-		margin-top: 40px;
-	}
+  #profile-info {
+    margin-top: 40px;
+  }
 
-	#skills-sections {
-		flex-wrap: wrap;
-	}
+  #skills-sections {
+    flex-wrap: wrap;
+  }
 
-	.workexp-entry-datelocation {
-		text-align: center;
-		height: 52px;
+  .workexp-entry-datelocation {
+    text-align: center;
+    height: 52px;
     min-width: 160px;
-	}
+  }
 
-	.workexp-entry-location {
-		display: block;
-	}
+  .workexp-entry-location {
+    display: block;
+  }
 
-	.workexp-entry-location::after {
-		content: "";
-	}
+  .workexp-entry-location::after {
+    content: "";
+  }
 
-	.workexp-entry-tasks {
-		margin-left: 20px;
-	}
+  .workexp-entry-tasks {
+    margin-left: 20px;
+  }
 }
